UPDATE simplify docker file, JVM memory setup, lower timeout limit, use forked version of Java library