@@ -1,9 +1,11 @@
-FROM maven:3-jdk-8
+FROM maven:3.5.0-jdk-8
 MAINTAINER David Esner <esnerda@gmail.com>
 
-ENV APP_VERSION 1.1.0
- WORKDIR /home
-RUN git clone https://github.com/davidesner/keboola-intercom-wr ./  
+
+COPY . /code/
+ENV MAVEN_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xmx256m"
+ENV JAVA_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xmx256m"
+WORKDIR /code/
 RUN mvn compile
 
-ENTRYPOINT mvn -q exec:java -Dexec.args=/data  
+ENTRYPOINT mvn -q exec:java -Dexec.args=/data
